plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'point'
if (!project.hasProperty('version')) {
	throw new GradleException("Missing version property in gradle.properties")
}
version = project.version

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	google()
}

dependencies {
	// ===== Spring Boot Core =====
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// ===== Database Driver =====
	runtimeOnly 'org.postgresql:postgresql'

	// ===== Security & Authentication =====
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'

	// ===== Validation =====
	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'

	// ===== API Documentation =====
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

	// ===== Lombok =====
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// ===== Testing =====
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.assertj:assertj-core:3.26.3'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'


	// ===== Youtube (yurim) =====

	implementation 'com.google.api-client:google-api-client:1.34.0'
	implementation 'com.google.http-client:google-http-client-jackson2:1.39.2'
	implementation 'com.google.oauth-client:google-oauth-client:1.34.0'
	implementation 'com.google.http-client:google-http-client:1.41.0'
	implementation 'com.google.apis:google-api-services-youtube:v3-rev20230816-2.0.0'
	implementation 'com.google.apis:google-api-services-youtubeAnalytics:v2-rev272-1.25.0'
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.10.0'

	}

tasks.named('test') {
	useJUnitPlatform()
}